--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,19 @@
 ---
 ---
 
+h2  {
+    margin: 0px 0;
+}
+
+#project_title {
+    top: 0;
+    margin: 0;
+    color: #fff;
+    font-size: 42px;
+    font-weight: 700;
+    text-shadow: #111 0px 0px 10px
+}
+
 @import "{{ site.theme }}";
 
 #header_wrap {
