--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,10 @@ h2  {
     margin: 0px 0;
 }
 
+#header_wrap .inner {
+    padding: 50px 10px 0px 10px
+}
+
 #project_title {
     position: absolute;
     top: 0;
@@ -16,8 +20,3 @@ h2  {
 }
 
 @import "{{ site.theme }}";
-
-
-#header_wrap {
-    max-height: 150px;
-}
