--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,5 +27,5 @@ h2  {
     background: -webkit-linear-gradient(top, rgba(48, 105, 172, 1), #212121);
     background: -ms-linear-gradient(top, rgba(48, 105, 172, 1), #212121);
     background: -o-linear-gradient(top, rgba(48, 105, 172, 1), #212121);
-    background: linear-gradient(top, #rgba(48, 105, 172, 1), #212121)
+    background: linear-gradient(top, rgba(48, 105, 172, 1), #212121)
 }
